# afe-web

./: .gitignore  Procfile  README.md  backup.json  build.sh  create_superuser.py  datadump.json  femis_data.json  femis_data_clean.json  fix_json.py  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js  userdata.json
afe/: asgi.py  settings.py  urls.py  validators.py  wsgi.py
core/: admin.py  ajax.py  context_processors.py  decorators.py  forms.py  middleware.py  models.py  storage.py  urls.py  utils.py
core/api/: serializers.py  sync_lookup.py  urls.py  views.py
core/attachable_forms/: components.py  form_models.py  forms.py  formslist_cache.json
core/migrations/: 0001_initial.py  0002_alter_detailactivitytype_form_and_more.py  0003_alter_itemsale_batch.py  0004_alter_itemsale_batch_alter_itemsale_unit_price.py  0005_imagesyncmeta.py  0006_itemrecieve_unit.py
core/static/: operation-plan.js  popupDatepicker.js
core/templates/: 403.html  404.html  base-table.html  base.html  permission_denied.html
core/templatetags/: custom_filters.py
core/views/: activity_plan_views.py  additional_forms_views.py  adminstration_views.py  configuration_views.py  customer_management_views.py  general_report_views.py  item_views.py  location_views.py  misc_views.py  operation_plan_views.py  report_views.py  role_permission_views.py  user_management_views.py
scripts/: generate_data.py
static/downloadable/: Detail Activity Template.csv  (+3 more)
staticfiles/: datepicker.js  modal.js
templates/: base-form.html  components.yaml
(+95 files in other folders)
