[tool.poetry]
name = "afe-web"
version = "0.1.0"
description = ""
authors = ["Milkias Yeheyis <milkias.yeheyis@yahoo.com>"]
readme = "README.md"
packages = [{include = "afe_web"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
django-extensions = "^3.2.3"
django-htmx = "^1.17.2"
django-components = "^0.31"
pillow = "^10.1.0"
slippers = "^0.6.2"
django-tables2 = "^2.7.0"
django-filter = "^23.5"
djangorestframework = "^3.14.0"
django-render-block = "^0.9.2"
django-rest-knox = "^4.2.0"
tablib = {extras = ["xlsx"], version = "^3.6.1"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
ethiopian-date-converter = "^0.1.5"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.1"}
anthropic = "^0.105.2"
django-cors-headers = "^4.9.0"


[tool.poetry.group.dev.dependencies]
django-environ = "^0.11.2"
django-browser-reload = "^1.12.1"
faker = "^21.0.0"
ipython = "^8.19.0"


[tool.djlint]
profile="django"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
